# GLSL-Debugger

./: CMakeLists.txt  README.txt  build-config.h
DebugFunctions/: CMakeLists.txt  glEnd.c
DebugLib/: CMakeLists.txt  connection.c  connection.h  debuglib.h  debuglibInternal.h  error.c  glstate.c  hooks.c  libglsldebug.c  memory.c  postExecution.c  preExecution.c  queries.c  readback.c  shader.c  streamRecording.c
DebugLib/generator/: FunctionHooks.pl  FunctionList.pl  genTypes.pm
GLSLCompiler/glslang/DebugCodeGen/: CMakeLists.txt
GLSLCompiler/glslang/GenericCodeGen/: CMakeLists.txt
GLSLCompiler/glslang/MachineIndependent/: CMakeLists.txt  ParseHelper.cpp  ShaderLang.cpp  intermOut.cpp
client/: CMakeLists.txt  Command.cpp  Command.qt.h  CommandFactory.cpp  CommandFactory.h  CommandImpl.cpp  CommandImpl.h  Connection.cpp  Connection.h  Connection.qt.h  DebugCommand.h  DebugConfig.h  Debugger.cpp  Debugger.qt.h  FunctionArgument.cpp  FunctionArgument.h  FunctionCall.cpp  FunctionCall.h  FunctionsMap.cpp  FunctionsMap.h  MessageBase.cpp  MessageBase.qt.h  MessageHandler.cpp  MessageHandler.h  MessageImpl.cpp  MessageImpl.h  Process.cpp  Process.qt.h  ResultHandler.cpp  ResultHandler.h
client/cli/: CMakeLists.txt  CliClient.qt.h  main.cpp
doc/: protocol.txt  readme.txt
glsldb/: CMakeLists.txt  Command.cpp  Command.h  Command.qt.h  CommandFactory.cpp  CommandFactory.h  CommandImpl.cpp  CommandImpl.h  Connection.cpp  Connection.h  DebugCommand.h  Debugger.cpp  Debugger.qt.h  FunctionArgument.cpp  FunctionArgument.h  FunctionsMap.cpp  FunctionsMap.h  MainWinResultHandler.cpp  MainWinResultHandler.h  MainWinResultHandler.qt.h  Process.cpp  Process.qt.h  ProcessFriends.inc.h  ResultHandler.cpp  ResultHandler.h  TraceStatsDockWidget.cpp  TraceStatsDockWidget.h  attachToProcess.cpp  debugConfig.h  editCallDialog.cpp  editCallDialog.qt.h  errorCodes.cpp  errorCodes.h  fragmentTestDialog.cpp  functionCall.cpp  geoShaderDataModel.cpp  glCallStatistics.cpp  glCallStatistics.qt.h  glTraceFilterModel.cpp  glTraceFilterModel.qt.h  (+18 more)
glsldb/DebugLib/: CMakeLists.txt  debuglib.h  debuglibInternal.h  error.c  hooks.c  libglsldebug.c  readback.c  shader.c
glsldb/DebugLib/generator/: FunctionHooks.pl  FunctionList.pl  GetProcAddressHook.pl
glsldb/os/: os.h
glsldb/ui/: TraceStatsDockWidget.ui  mainWindow.ui  openProgramDialog.ui
glsldb/utils/: CMakeLists.txt  build-config.h  glsldb_ptrace.h  notify.c  notify.h  p2pcopy.c  p2pcopy.h  types.c
proto/: debugger.pb-c.c  debugger.pb-c.h  debugger.pb.cc  debugger.pb.h  debugger.proto  generate.sh  protocol.c  protocol.h
utils/: CMakeLists.txt  connection.c  connection.h  dlutils.c  dlutils.h  glenumerants.c  notify.c  notify.h  p2pcopy.c  p2pcopy.h  queue.c  queue.h  server.c  server.h  socket.c  socket.h  types.c  types.h
utils/os/: os.h
